--- a/2018/1/MAT1203/2/solucion.tex
+++ b/2018/1/MAT1203/2/solucion.tex
@@ -215,5 +215,131 @@ Para realizar esto, basta con utilizar dos trios de puntos que contengan a los d
 		$$\Pi_1: -6x + 4y + 3z = 0$$		
 		$$\Pi_2: -12x+2y+3z = -12$$
 \end{solucion}
+\item Encontrar un plano que sea perpendicular al plano cuya ecuación es $3x -7y +2z = 5$ y que pase por el punto $P(0,2,-1)$
+\begin{solucion}
+En primer lugar, debemos encontrar el vector normal del plano, que esta dado por los coeficientes de su ecuación, es decir
+		$$\vec{n} = \begin{pmatrix}
+		3\\-7\\2
+		\end{pmatrix}$$
+		Si los vectores normales de dos planos son perpendiculares entre si, los planos también lo serán, por lo que basta encontrar un vector perpendicular a $\vec{n}$ y utilizarlo como vector normal para nuestro nuevo plano. Para encontrar un vector perpendicular, realizaremos el producto cruz entre $\vec{n}$ y un vector arbitrario elegido por nosotros
+		$$\begin{pmatrix} 3 \\ -7 \\ 2 \end{pmatrix} \times \begin{pmatrix} 1 \\ 1 \\ 1 \end{pmatrix} = \begin{pmatrix} -9 \\ -1 \\ 10 \end{pmatrix}$$
+		Para encontrar el plano asociado, basta que utilicemos los coeficientes del vector como coeficientes de la ecuación del plano
+		$$-9x -y +10z = D$$
+		Por último, para encontrar $D$, reemplazamos el punto que nos dan en la ecuación del plano
+		$$-2 -10 = D \ra D = -12$$
+		Finalmente,
+		$$\Pi: -9x -y +10z = -12$$
+\end{solucion}
+\item Determinar la ecuación de un plano que pase por $P(4,2,1)$ y que sea paralelo al plano de ecuación $2x-5y+z=6$
+\begin{solucion}
+De forma análoga, para que dos planos sean paralelos, basta con que sus vectores normales sean paralelos. Dicho de otra forma, lo que va a cambiar será el parametro $D$. Es decir, nuestro plano es
+		$$2x - 5y + z = D$$
+		Reemplazando con el punto,
+		$$8-10+1 = D \ra D = -1$$
+		Luego, el plano buscado es
+		$$\Pi: 2x - 5y + z = -1$$
+\end{solucion}
+\item Escribe los siguientes sistemas de ecuaciones en notación matricial.
+\begin{tasks}(2)
+\task $
+		\begin{array}{rcr}
+		x_1 -x_2 + 3x_3 & = & 2\\
+		3x_2 - 2x_3 & = & 0\\
+		4x_1 +2x_2 & = & -1
+		\end{array}
+		$
+\task $
+		\begin{array}{rcr}
+		3x_1 & = & 1\\
+		x_1-x_2& = & 3\\
+		-2x_1+x_2 & = & -8\\
+		x_2 & = & 0
+		\end{array}
+		$
+\task $
+		\begin{array}{rcr}
+		2x_2 -x_3 +2x_4& = & 5\\
+		x_1+x_2 - x_3 & = & 2\\
+		-4x_1 +x_3-x_4& = & -4
+		\end{array}
+		$
+\task $
+		\begin{array}{rcr}
+		x_1 +x_2-3x_3& = & 0\\
+		x_2+4x_4& = & -1\\
+		x_1-2x_2+x_3-5x_4 & = & 2\\
+		x_3-x_4 & = & 5
+		\end{array}
+		$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $
+			\begin{array}{rcr}
+			x_1 -x_2 + 3x_3 & = & 2\\
+			3x_2 - 2x_3 & = & 0\\
+			4x_1 +2x_2 & = & -1
+			\end{array}
+			\Longrightarrow 
+			\left[
+			\begin{array}{ccc|c}
+				1 & -1 & 3 & 2\\
+				0 & 3 & -2 & 0\\
+				4 & 2 & 0 & 1
+			\end{array}
+			\right]
+			$
+\item $
+			\begin{array}{rcr}
+			3x_1 & = & 1\\
+			x_1-x_2& = & 3\\
+			-2x_1+x_2 & = & -8\\
+			x_2 & = & 0
+			\end{array}
+			\Longrightarrow 
+			\left[
+			\begin{array}{cc|c}
+			3 & 0 & 1\\
+			1 &-1 & 3\\
+			-2 & 1 & -8\\
+			0 & 1 & 0
+			\end{array}
+			\right]
+			$
+\item $
+			\begin{array}{rcr}
+			2x_2 -x_3 +2x_4& = & 5\\
+			x_1+x_2 - x_3 & = & 2\\
+			-4x_1 +x_3-x_4& = & -4
+			\end{array}
+			\Longrightarrow 
+			\left[
+			\begin{array}{cccc|c}
+			0 &2 &-1&2&5\\
+			1 &1 & -1 & 0 &2\\
+			-4 &0 & 1 & -1 &-4
+			\end{array}
+			\right]
+			$
+\item $
+			\begin{array}{rcr}
+			x_1 +x_2-3x_3& = & 0\\
+			x_2+4x_4& = & -1\\
+			x_1-2x_2+x_3-5x_4 & = & 2\\
+			x_3-x_4 & = & 5
+			\end{array}
+			\Longrightarrow 
+			\left[
+			\begin{array}{cccc|c}
+			1 & 1 & -3 & 0 & 0\\
+			0 & 1 & 0 & 4 & -1\\
+			1 & -2 & 1 & -5 & 2\\
+			0 & 0 & 1 & -1 & 5
+			\end{array}
+			\right]
+			$
+\end{enumerate}
+\end{solucion}
 \end{preguntas}
 \end{document}
