--- a/2018/1/MAT1203/2/enunciado.tex
+++ b/2018/1/MAT1203/2/enunciado.tex
@@ -142,5 +142,22 @@
 		\end{array}
 		$
 \end{tasks}
+\item Dadas las siguientes matrices aumentadas, escribir el sistema de ecuaciones asociado.
+\begin{tasks}(2)
+\task $
+		\begin{bmatrix}
+		-4 & 2 & 1 &  0\\
+		2  & 1 & 2 & -1\\
+		-3 & 5 &-6& -2
+		\end{bmatrix}
+		$
+\task $
+		\begin{bmatrix}
+		2 & 1 & -3 & 0\\
+		1  & -2 & 0 & 12\\
+		4 & 2 &1& 8
+		\end{bmatrix}
+		$
+\end{tasks}
 \end{preguntas}
 \end{document}
