Solución de 2018/1/MAT1203/2

--- a/2018/1/MAT1203/2/solucion.tex
+++ b/2018/1/MAT1203/2/solucion.tex
@@ -341,5 +341,53 @@ De forma análoga, para que dos planos sean paralelos, basta con que sus vectore
 			$
 \end{enumerate}
 \end{solucion}
+\item Dadas las siguientes matrices aumentadas, escribir el sistema de ecuaciones asociado.
+\begin{tasks}(2)
+\task $
+		\begin{bmatrix}
+		-4 & 2 & 1 &  0\\
+		2  & 1 & 2 & -1\\
+		-3 & 5 &-6& -2
+		\end{bmatrix}
+		$
+\task $
+		\begin{bmatrix}
+		2 & 1 & -3 & 0\\
+		1  & -2 & 0 & 12\\
+		4 & 2 &1& 8
+		\end{bmatrix}
+		$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $
+			\begin{bmatrix}
+			-4 & 2 & 1 &  0\\
+			2  & 1 & 2 & -1\\
+			-3 & 5 &-6& -2
+			\end{bmatrix}
+			\Longrightarrow
+			\begin{array}{rcr}
+			-4x_1 + 2x_2 + x_3& = & 0\\
+			2x_1 + x_2 + 2x_3& = & -1\\
+			-3x_1 + 5x_2 - 6x_3 & = & -2
+			\end{array}
+			$
+\item $
+			\begin{bmatrix}
+			2 & 1 & -3 & 0\\
+			1  & -2 & 0 & 12\\
+			4 & 2 &1& 8
+			\end{bmatrix}
+			\Longrightarrow
+			\begin{array}{rcr}
+			2x_1 + x_2 - 3x_3& = & 0\\
+			x_1-2x_2& = & 12\\
+			4x_1+2x_2+x_3 & = & 8
+			\end{array}
+			$
+\end{enumerate}
+\end{solucion}
 \end{preguntas}
 \end{document}
