--- a/2018/1/MAT1203/2/enunciado.tex
+++ b/2018/1/MAT1203/2/enunciado.tex
@@ -159,5 +159,14 @@
 		\end{bmatrix}
 		$
 \end{tasks}
+\item Determinar si el siguiente sistema es consistente o no
+	$$
+	\begin{array}{rcr}
+	x_1 -6x_2& = & 5\\
+	x_2-4x_3+x_4& = & 0\\
+	-x_1+6x_2+x_3+5x_4& = & 3\\
+	-x_2+5x_3+4x_4 & = & 0
+	\end{array}
+	$$
 \end{preguntas}
 \end{document}
