--- a/2019/1/MAT1203/2/enunciado.tex
+++ b/2019/1/MAT1203/2/enunciado.tex
@@ -104,5 +104,81 @@
 \end{center}
 
 \begin{preguntas}
+\item Escribe los siguientes sistemas de ecuaciones en notación matricial.
+\begin{tasks}(2)
+\task $
+		\begin{array}{rcr}
+		x_1 -x_2 + 3x_3 & = & 2\\
+		3x_2 - 2x_3 & = & 0\\
+		4x_1 +2x_2 & = & -1
+		\end{array}
+		$
+\task $
+		\begin{array}{rcr}
+		3x_1 & = & 1\\
+		x_1-x_2& = & 3\\
+		-2x_1+x_2 & = & -8\\
+		x_2 & = & 0
+		\end{array}
+		$
+\task $
+		\begin{array}{rcr}
+		2x_2 -x_3 +2x_4& = & 5\\
+		x_1+x_2 - x_3 & = & 2\\
+		-4x_1 +x_3-x_4& = & -4
+		\end{array}
+		$
+\task $
+		\begin{array}{rcr}
+		x_1 +x_2-3x_3& = & 0\\
+		x_2+4x_4& = & -1\\
+		x_1-2x_2+x_3-5x_4 & = & 2\\
+		x_3-x_4 & = & 5
+		\end{array}
+		$
+\end{tasks}
+\item Dadas las siguientes matrices aumentadas, escribir el sistema de ecuaciones asociado.
+\begin{tasks}(2)
+\task $
+		\begin{bmatrix}
+		-4 & 2 & 1 &  0\\
+		2  & 1 & 2 & -1\\
+		-3 & 5 &-6& -2
+		\end{bmatrix}
+		$
+\task $
+		\begin{bmatrix}
+		2 & 1 & -3 & 0\\
+		1  & -2 & 0 & 12\\
+		4 & 2 &1& 8
+		\end{bmatrix}
+		$
+\end{tasks}
+\item Determinar si el siguiente sistema es consistente o no
+	$$
+	\begin{array}{rcr}
+	x_1 -6x_2& = & 5\\
+	x_2-4x_3+x_4& = & 0\\
+	-x_1+6x_2+x_3+5x_4& = & 3\\
+	-x_2+5x_3+4x_4 & = & 0
+	\end{array}
+	$$
+\item Lleve las siguientes matrices a su forma escalonada reducida y determine la existencia y unicidad de las soluciones del sistema.
+\begin{tasks}(2)
+\task $
+		\begin{bmatrix}
+		1 & 2 & 4 & 8\\
+		2 & 4 & 6 & 8\\
+		3 & 6 & 9 & 12
+		\end{bmatrix}
+		$
+\task $
+		\begin{bmatrix}
+		1 & 2 & 4 & 5\\
+		2 & 4 & 5& 4\\
+		4 & 5 & 4 & 2
+		\end{bmatrix}
+		$
+\end{tasks}
 \end{preguntas}
 \end{document}
