Enunciado de 2018/1/MAT1203/3

--- a/2018/1/MAT1203/3/enunciado.tex
+++ b/2018/1/MAT1203/3/enunciado.tex
@@ -104,5 +104,23 @@
 \end{center}
 
 \begin{preguntas}
+\item Sean los vectores 
+	$$
+	v_1 = \begin{pmatrix}
+	1\\
+	1\\
+	2
+	\end{pmatrix};\qquad
+	v_2 = \begin{pmatrix}
+	2\\
+	2\\
+	-3
+	\end{pmatrix}; \qquad
+	v_3 = \begin{pmatrix}
+	0\\
+	1\\
+	3
+	\end{pmatrix}$$
+	determinar si $Gen\{v_1, v_2, v_3\} = R^3$.
 \end{preguntas}
 \end{document}
