--- a/2018/1/MAT1203/3/enunciado.tex
+++ b/2018/1/MAT1203/3/enunciado.tex
@@ -122,5 +122,20 @@
 	3
 	\end{pmatrix}$$
 	determinar si $Gen\{v_1, v_2, v_3\} = R^3$.
+\item Sea la matriz $A=
+	\begin{bmatrix}
+	3 & 5 & -4\\
+	-3 & -2 & 4\\
+	6 & 1 & -8
+	\end{bmatrix}$
+\begin{enumerate}[a)]
+\item Determinar el conjunto solución de su sistema homogeneo.
+\item Describir todas las soluciones de $Ax=b$ con $b=
+		\begin{pmatrix}
+		7\\
+		-1\\
+		-4
+		\end{pmatrix}$ 
+\end{enumerate}
 \end{preguntas}
 \end{document}
