Enunciado de 2018/1/MAT1203/3

--- a/2018/1/MAT1203/3/enunciado.tex
+++ b/2018/1/MAT1203/3/enunciado.tex
@@ -137,5 +137,12 @@
 		-4
 		\end{pmatrix}$ 
 \end{enumerate}
+\item Sea la matriz $A=
+	\begin{bmatrix}
+	1 & 3 & 4\\
+	-4 & 2 & -6\\
+	-3 & -2 & -7
+	\end{bmatrix}
+	$ y $b$ un vector en $R^3$. ¿La ecuación $Ax=b$ es consistente para todo $b$?
 \end{preguntas}
 \end{document}
