--- a/2018/1/MAT1203/3/enunciado.tex
+++ b/2018/1/MAT1203/3/enunciado.tex
@@ -144,5 +144,12 @@
 	-3 & -2 & -7
 	\end{bmatrix}
 	$ y $b$ un vector en $R^3$. ¿La ecuación $Ax=b$ es consistente para todo $b$?
+\item Describa todas las soluciones del siguiente sistema de ecuaciones y comparelas con las de su sistema homogeneo
+	$$
+	\begin{array}{rcr}
+	x_1 +2x_2-3x_3& = & 5\\
+	2x_1 + x_2 - 3x_3& = & 13\\
+	-x_1 + x_2 & = & -8
+	\end{array}$$
 \end{preguntas}
 \end{document}
