--- a/2019/1/MAT1203/2/enunciado.tex
+++ b/2019/1/MAT1203/2/enunciado.tex
@@ -195,5 +195,12 @@
 		-4
 		\end{pmatrix}$ 
 \end{enumerate}
+\item Describa todas las soluciones del siguiente sistema de ecuaciones y comparelas con las de su sistema homogeneo
+	$$
+	\begin{array}{rcr}
+	x_1 +2x_2-3x_3& = & 5\\
+	2x_1 + x_2 - 3x_3& = & 13\\
+	-x_1 + x_2 & = & -8
+	\end{array}$$
 \end{preguntas}
 \end{document}
