--- a/2019/1/MAT1203/2/enunciado.tex
+++ b/2019/1/MAT1203/2/enunciado.tex
@@ -202,5 +202,16 @@
 	2x_1 + x_2 - 3x_3& = & 13\\
 	-x_1 + x_2 & = & -8
 	\end{array}$$
+\item Considere el siguiente sistema de ecuaciones, donde $a$ es una constante.
+  $$\begin{array}{llll}
+   x_1&+x_2&+x_3&=1 \\
+    x_1&+x_2&+ax_3&=1 \\
+     ax_1&+ax_2&+x_3&=a\\
+      x_1&-ax_2&+ax_3&=0  
+  \end{array}$$
+\begin{enumerate}[a)]
+\item Determine valores de $a$ para los cuales el sistema es inconsistente.
+\item Determine valores de $a$ para los cuales el sistema es consistente, y encuentre la solución.
+\end{enumerate}
 \end{preguntas}
 \end{document}
