--- a/2019/1/MAT1203/2/solucion.tex
+++ b/2019/1/MAT1203/2/solucion.tex
@@ -625,5 +625,23 @@ La matriz aumentada asociada es
 		1
 		\end{pmatrix}\right\}$$
 \end{solucion}
+\item Considere el siguiente sistema de ecuaciones, donde $a$ es una constante.
+  $$\begin{array}{llll}
+   x_1&+x_2&+x_3&=1 \\
+    x_1&+x_2&+ax_3&=1 \\
+     ax_1&+ax_2&+x_3&=a\\
+      x_1&-ax_2&+ax_3&=0  
+  \end{array}$$
+\begin{enumerate}[a)]
+\item Determine valores de $a$ para los cuales el sistema es inconsistente.
+\item Determine valores de $a$ para los cuales el sistema es consistente, y encuentre la solución.
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\item 
+\end{enumerate}
+\end{solucion}
 \end{preguntas}
 \end{document}
