Enunciado de 2019/1/MAT1203/2

--- a/2019/1/MAT1203/2/enunciado.tex
+++ b/2019/1/MAT1203/2/enunciado.tex
@@ -206,12 +206,12 @@
 		-4
 		\end{pmatrix}$ 
 \end{enumerate}
-\item Describa todas las soluciones del siguiente sistema de ecuaciones y comparelas con las de su sistema homogeneo
-	$$
-	\begin{array}{rcr}
-	x_1 +2x_2-3x_3& = & 5\\
-	2x_1 + x_2 - 3x_3& = & 13\\
-	-x_1 + x_2 & = & -8
-	\end{array}$$
+\item Sea la matriz $A=
+	\begin{bmatrix}
+	1 & 3 & 4\\
+	-4 & 2 & -6\\
+	-3 & -2 & -7
+	\end{bmatrix}
+	$ y $b$ un vector en $R^3$. ¿La ecuación $Ax=b$ es consistente para todo $b$?
 \end{preguntas}
 \end{document}
