Enunciado de 2019/1/MAT1203/2

--- a/2019/1/MAT1203/2/enunciado.tex
+++ b/2019/1/MAT1203/2/enunciado.tex
@@ -213,5 +213,23 @@
 	-3 & -2 & -7
 	\end{bmatrix}
 	$ y $b$ un vector en $R^3$. ¿La ecuación $Ax=b$ es consistente para todo $b$?
+\item Sean los vectores 
+	$$
+	v_1 = \begin{pmatrix}
+	1\\
+	1\\
+	2
+	\end{pmatrix};\qquad
+	v_2 = \begin{pmatrix}
+	2\\
+	2\\
+	-3
+	\end{pmatrix}; \qquad
+	v_3 = \begin{pmatrix}
+	0\\
+	1\\
+	3
+	\end{pmatrix}$$
+	determinar si $Gen\{v_1, v_2, v_3\} = R^3$.
 \end{preguntas}
 \end{document}
