Enunciado de 2019/1/MAT1203/2

--- a/2019/1/MAT1203/2/enunciado.tex
+++ b/2019/1/MAT1203/2/enunciado.tex
@@ -231,5 +231,15 @@
 	3
 	\end{pmatrix}$$
 	determinar si $Gen\{v_1, v_2, v_3\} = R^3$.
+\item Sean $v_1=\left(\begin{array}{r}
+  1\\0\\-2
+\end{array}\right)$, $v_2=\left(\begin{array}{r}
+  -2\\1\\7
+\end{array}\right)$ y $v_3=\left(\begin{array}{r}
+  h\\0\\-2
+\end{array}\right)$. ¿Para qué valor(es) de $h$ $Gen\{v_1, v_2, v_3\}=Gen\{v_1,v_2\}$ ?
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
 \end{preguntas}
 \end{document}
