Solución de 2019/1/MAT1203/2

--- a/2019/1/MAT1203/2/solucion.tex
+++ b/2019/1/MAT1203/2/solucion.tex
@@ -669,5 +669,21 @@ Para ver si estos tres vectores generan $\R^3$, tiene que pasar que todos sean L
 		\end{bmatrix}$$
 		Como la matriz tiene 3 pivotes, quiere decir que hay 3 vectores L.I., es decir, todos son linealmente independientes entre si, formando asi $\R^3$
 \end{solucion}
+\item Sean $v_1=\left(\begin{array}{r}
+  1\\0\\-2
+\end{array}\right)$, $v_2=\left(\begin{array}{r}
+  -2\\1\\7
+\end{array}\right)$ y $v_3=\left(\begin{array}{r}
+  h\\0\\-2
+\end{array}\right)$. ¿Para qué valor(es) de $h$ $Gen\{v_1, v_2, v_3\}=Gen\{v_1,v_2\}$ ?
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
+\end{solucion}
 \end{preguntas}
 \end{document}
