--- a/2019/1/MAT1203/2/enunciado.tex
+++ b/2019/1/MAT1203/2/enunciado.tex
@@ -104,56 +104,6 @@
 \end{center}
 
 \begin{preguntas}
-\item Escribe los siguientes sistemas de ecuaciones en notación matricial.
-\begin{tasks}(2)
-\task $
-		\begin{array}{rcr}
-		x_1 -x_2 + 3x_3 & = & 2\\
-		3x_2 - 2x_3 & = & 0\\
-		4x_1 +2x_2 & = & -1
-		\end{array}
-		$
-\task $
-		\begin{array}{rcr}
-		3x_1 & = & 1\\
-		x_1-x_2& = & 3\\
-		-2x_1+x_2 & = & -8\\
-		x_2 & = & 0
-		\end{array}
-		$
-\task $
-		\begin{array}{rcr}
-		2x_2 -x_3 +2x_4& = & 5\\
-		x_1+x_2 - x_3 & = & 2\\
-		-4x_1 +x_3-x_4& = & -4
-		\end{array}
-		$
-\task $
-		\begin{array}{rcr}
-		x_1 +x_2-3x_3& = & 0\\
-		x_2+4x_4& = & -1\\
-		x_1-2x_2+x_3-5x_4 & = & 2\\
-		x_3-x_4 & = & 5
-		\end{array}
-		$
-\end{tasks}
-\item Dadas las siguientes matrices aumentadas, escribir el sistema de ecuaciones asociado.
-\begin{tasks}(2)
-\task $
-		\begin{bmatrix}
-		-4 & 2 & 1 &  0\\
-		2  & 1 & 2 & -1\\
-		-3 & 5 &-6& -2
-		\end{bmatrix}
-		$
-\task $
-		\begin{bmatrix}
-		2 & 1 & -3 & 0\\
-		1  & -2 & 0 & 12\\
-		4 & 2 &1& 8
-		\end{bmatrix}
-		$
-\end{tasks}
 \item Determinar si el siguiente sistema es consistente o no
 	$$
 	\begin{array}{rcr}
@@ -231,13 +181,15 @@
 	3
 	\end{pmatrix}$$
 	determinar si $Gen\{v_1, v_2, v_3\} = R^3$.
-\item Sean $v_1=\left(\begin{array}{r}
+\item Sean 
+$$v_1=\left(\begin{array}{r}
   1\\0\\-2
-\end{array}\right)$, $v_2=\left(\begin{array}{r}
+\end{array}\right), \quadv_2=\left(\begin{array}{r}
   -2\\1\\7
-\end{array}\right)$ y $v_3=\left(\begin{array}{r}
+\end{array}\right) \quad y \quad v_3=\left(\begin{array}{r}
   h\\0\\-2
-\end{array}\right)$. ¿Para qué valor(es) de $h$ $Gen\{v_1, v_2, v_3\}=Gen\{v_1,v_2\}$ ?
+\end{array}\right)$$
+¿Para qué valor(es) de $h$ $Gen\{v_1, v_2, v_3\}=Gen\{v_1,v_2\}$ ?
 \begin{enumerate}[a)]
 \item 
 \end{enumerate}
