--- a/2019/1/MAT1203/2/solucion.tex
+++ b/2019/1/MAT1203/2/solucion.tex
@@ -104,156 +104,6 @@
 \end{center}
 
 \begin{preguntas}
-\item Escribe los siguientes sistemas de ecuaciones en notación matricial.
-\begin{tasks}(2)
-\task $
-		\begin{array}{rcr}
-		x_1 -x_2 + 3x_3 & = & 2\\
-		3x_2 - 2x_3 & = & 0\\
-		4x_1 +2x_2 & = & -1
-		\end{array}
-		$
-\task $
-		\begin{array}{rcr}
-		3x_1 & = & 1\\
-		x_1-x_2& = & 3\\
-		-2x_1+x_2 & = & -8\\
-		x_2 & = & 0
-		\end{array}
-		$
-\task $
-		\begin{array}{rcr}
-		2x_2 -x_3 +2x_4& = & 5\\
-		x_1+x_2 - x_3 & = & 2\\
-		-4x_1 +x_3-x_4& = & -4
-		\end{array}
-		$
-\task $
-		\begin{array}{rcr}
-		x_1 +x_2-3x_3& = & 0\\
-		x_2+4x_4& = & -1\\
-		x_1-2x_2+x_3-5x_4 & = & 2\\
-		x_3-x_4 & = & 5
-		\end{array}
-		$
-\end{tasks}
-\begin{solucion}
-
-\begin{enumerate}[a)]
-\item $
-			\begin{array}{rcr}
-			x_1 -x_2 + 3x_3 & = & 2\\
-			3x_2 - 2x_3 & = & 0\\
-			4x_1 +2x_2 & = & -1
-			\end{array}
-			\Longrightarrow 
-			\left[
-			\begin{array}{ccc|c}
-				1 & -1 & 3 & 2\\
-				0 & 3 & -2 & 0\\
-				4 & 2 & 0 & 1
-			\end{array}
-			\right]
-			$
-\item $
-			\begin{array}{rcr}
-			3x_1 & = & 1\\
-			x_1-x_2& = & 3\\
-			-2x_1+x_2 & = & -8\\
-			x_2 & = & 0
-			\end{array}
-			\Longrightarrow 
-			\left[
-			\begin{array}{cc|c}
-			3 & 0 & 1\\
-			1 &-1 & 3\\
-			-2 & 1 & -8\\
-			0 & 1 & 0
-			\end{array}
-			\right]
-			$
-\item $
-			\begin{array}{rcr}
-			2x_2 -x_3 +2x_4& = & 5\\
-			x_1+x_2 - x_3 & = & 2\\
-			-4x_1 +x_3-x_4& = & -4
-			\end{array}
-			\Longrightarrow 
-			\left[
-			\begin{array}{cccc|c}
-			0 &2 &-1&2&5\\
-			1 &1 & -1 & 0 &2\\
-			-4 &0 & 1 & -1 &-4
-			\end{array}
-			\right]
-			$
-\item $
-			\begin{array}{rcr}
-			x_1 +x_2-3x_3& = & 0\\
-			x_2+4x_4& = & -1\\
-			x_1-2x_2+x_3-5x_4 & = & 2\\
-			x_3-x_4 & = & 5
-			\end{array}
-			\Longrightarrow 
-			\left[
-			\begin{array}{cccc|c}
-			1 & 1 & -3 & 0 & 0\\
-			0 & 1 & 0 & 4 & -1\\
-			1 & -2 & 1 & -5 & 2\\
-			0 & 0 & 1 & -1 & 5
-			\end{array}
-			\right]
-			$
-\end{enumerate}
-\end{solucion}
-\item Dadas las siguientes matrices aumentadas, escribir el sistema de ecuaciones asociado.
-\begin{tasks}(2)
-\task $
-		\begin{bmatrix}
-		-4 & 2 & 1 &  0\\
-		2  & 1 & 2 & -1\\
-		-3 & 5 &-6& -2
-		\end{bmatrix}
-		$
-\task $
-		\begin{bmatrix}
-		2 & 1 & -3 & 0\\
-		1  & -2 & 0 & 12\\
-		4 & 2 &1& 8
-		\end{bmatrix}
-		$
-\end{tasks}
-\begin{solucion}
-
-\begin{enumerate}[a)]
-\item $
-			\begin{bmatrix}
-			-4 & 2 & 1 &  0\\
-			2  & 1 & 2 & -1\\
-			-3 & 5 &-6& -2
-			\end{bmatrix}
-			\Longrightarrow
-			\begin{array}{rcr}
-			-4x_1 + 2x_2 + x_3& = & 0\\
-			2x_1 + x_2 + 2x_3& = & -1\\
-			-3x_1 + 5x_2 - 6x_3 & = & -2
-			\end{array}
-			$
-\item $
-			\begin{bmatrix}
-			2 & 1 & -3 & 0\\
-			1  & -2 & 0 & 12\\
-			4 & 2 &1& 8
-			\end{bmatrix}
-			\Longrightarrow
-			\begin{array}{rcr}
-			2x_1 + x_2 - 3x_3& = & 0\\
-			x_1-2x_2& = & 12\\
-			4x_1+2x_2+x_3 & = & 8
-			\end{array}
-			$
-\end{enumerate}
-\end{solucion}
 \item Determinar si el siguiente sistema es consistente o no
 	$$
 	\begin{array}{rcr}
@@ -669,13 +519,15 @@ Para ver si estos tres vectores generan $\R^3$, tiene que pasar que todos sean L
 		\end{bmatrix}$$
 		Como la matriz tiene 3 pivotes, quiere decir que hay 3 vectores L.I., es decir, todos son linealmente independientes entre si, formando asi $\R^3$
 \end{solucion}
-\item Sean $v_1=\left(\begin{array}{r}
+\item Sean 
+$$v_1=\left(\begin{array}{r}
   1\\0\\-2
-\end{array}\right)$, $v_2=\left(\begin{array}{r}
+\end{array}\right), \quadv_2=\left(\begin{array}{r}
   -2\\1\\7
-\end{array}\right)$ y $v_3=\left(\begin{array}{r}
+\end{array}\right) \quad y \quad v_3=\left(\begin{array}{r}
   h\\0\\-2
-\end{array}\right)$. ¿Para qué valor(es) de $h$ $Gen\{v_1, v_2, v_3\}=Gen\{v_1,v_2\}$ ?
+\end{array}\right)$$
+¿Para qué valor(es) de $h$ $Gen\{v_1, v_2, v_3\}=Gen\{v_1,v_2\}$ ?
 \begin{enumerate}[a)]
 \item 
 \end{enumerate}
