Enunciado de 2019/1/MAT1203/2

--- a/2019/1/MAT1203/2/enunciado.tex
+++ b/2019/1/MAT1203/2/enunciado.tex
@@ -113,7 +113,7 @@
 	-x_2+5x_3+4x_4 & = & 0
 	\end{array}
 	$$
-\item Lleve las siguientes matrices a su forma escalonada reducida y determine la existencia y unicidad de las soluciones del sistema.
+\item Lleve las siguientes matrices ampliadas a su forma escalonada reducida y determine la existencia y unicidad de las soluciones del sistema.
 \begin{tasks}(2)
 \task $
 		\begin{bmatrix}
