Solución de 2019/1/MAT1203/2

--- a/2019/1/MAT1203/2/solucion.tex
+++ b/2019/1/MAT1203/2/solucion.tex
@@ -151,7 +151,7 @@ En primer lugar, escribiremos el sistema en notación matricial
 		\right] $$
 		Aqui podemos apreciar que en el la última fila, todas las variables tienen coeficiente cero y la columna de coeficientes aumentados tiene valor, lo que no es posible, ya que esto significaría que se cumple la igualdad $0 = -8$, lo que no es cierto. Dicho esto, el sistema no es consistente.
 \end{solucion}
-\item Lleve las siguientes matrices a su forma escalonada reducida y determine la existencia y unicidad de las soluciones del sistema.
+\item Lleve las siguientes matrices ampliadas a su forma escalonada reducida y determine la existencia y unicidad de las soluciones del sistema.
 \begin{tasks}(2)
 \task $
 		\begin{bmatrix}
