--- a/2019/1/MAT1610/1/enunciado.tex
+++ b/2019/1/MAT1610/1/enunciado.tex
@@ -17,7 +17,7 @@
 \usepackage[makeroom]{cancel}
 \usepackage{multicol}
 \usepackage[shortlabels]{enumitem}
-\usepackage{tabto}
+\usepackage{stackrel}
 
 \setlength{\headheight}{10pt}
 \setlength{\headsep}{10pt}
@@ -74,6 +74,10 @@
 \newcommand{\lb}{\\~\\}
 \newcommand{\eop}{_{\square}}
 \newcommand{\hsig}{\hat{\sigma}}
+\newcommand{\widesim}[2][1.5]{
+	\mathrel{\overset{#2}{\scalebox{#1}[1]{$\sim$}}}
+}
+\newcommand{\wsim}{\widesim{}}
 
 \begin{document}
 \thispagestyle{empty}
@@ -118,7 +122,7 @@
 \item Determina $a$ para que el siguiente límite exista:
 $$ \lim\limits_{x \ra 2} \dfrac{x^2+ax+6}{x^2-4} $$
 \item Aplicando la definición de límite, demostrar que
-$$\lim\limits_{x \ra 1} \dfrac{x+1}{2} = 2$$
+$$\lim\limits_{x \ra 1} \dfrac{x+3}{2} = 2$$
 \item Calcule el siguiente límite, en caso de que exista
 $$ \lim\limits_{x \ra 0} x^2e^{\sin{\frac{1}{x}}} $$
 \textit{\textbf{Hint:} Utilice el teorema del sandwich}
